# pr-mas

./: LICENSE  README.md  primitive_reflexes_blog.md  pyproject.toml
src/pr_mas/: crew.py  main.py
src/pr_mas/config/: agents.yaml  tasks.yaml
