[project]
name = "pr_mas"
version = "0.1.0"
description = "pr-mas using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0",
    "onnxruntime==1.15.0",
    "socksio>=1.0.0",
    "pyarrow==17.0.0",
    ]

[project.scripts]
pr_mas = "pr_mas.main:run"
run_crew = "pr_mas.main:run"
train = "pr_mas.main:train"
replay = "pr_mas.main:replay"
test = "pr_mas.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
